# quadracode

./: .cursorignore  .env.docker.sample  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  DEBUG.md  Dockerfile.workspace  FRONTEND_CHECKLIST.md  GRUNT_LOG.md  LICENSE  NEXT.md  PLAN.md  README.md  RULES.md  TASK_PLAN.md  TECHNICAL_IMPLEMENTATION.md  TESTING.md  TESTS.md  conftest.py  debug_mcp.py  debug_mcp2.py  docker-compose.yml  pyproject.toml  pytest.ini  quadracode-paper.tex  quadracode_paper.md  run_ai_tests.sh  run_containerized_tests.sh  run_e2e_tests.sh  run_e2e_tests_for_ai.sh  run_tests_containerized.sh  verify_full_flow.py  verify_orchestrator.py
context_engine_logs/: global.jsonl
docs/: PROMPT_CONFIGURATION.md  PROMPT_PERSISTENCE_ARCHITECTURE.md
examples/: prompt_templates.json  prompt_templates_minimal.json
quadracode-agent/: Dockerfile  IMPLEMENTATION.md  langgraph-docker.json  langgraph-local.json  pyproject.toml
quadracode-agent-registry/: Dockerfile  IMPLEMENTATION.md  openapi.json  pyproject.toml
quadracode-agent-registry/src/agent_registry/: __init__.py  api.py  app.py  config.py  database.py  main.py  schemas.py  service.py
quadracode-agent-registry/tests/: test_hotpath_registry.py
quadracode-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
quadracode-agent/src/quadracode_agent/: __init__.py  __main__.py  graph.py  profile.py
quadracode-agent/src/quadracode_agent/prompts/: system.py
quadracode-contracts/: IMPLEMENTATION.md  pyproject.toml
quadracode-contracts/src/quadracode_contracts/: __init__.py  agent_id.py  agent_registry.py  autonomous.py  human_clone.py  messaging.py  workspace.py
quadracode-contracts/tests/: __init__.py  test_agent_id.py  test_agent_registry.py  test_autonomous.py  test_human_clone.py  test_messaging.py  test_workspace.py
quadracode-orchestrator/: Dockerfile  IMPLEMENTATION.md  langgraph-docker.json  langgraph-local.json  pyproject.toml
quadracode-orchestrator/.langgraph_api/: .langgraph_checkpoint.2.pckl
quadracode-orchestrator/src/quadracode_orchestrator/: __init__.py  __main__.py  graph.py  profile.py
quadracode-orchestrator/src/quadracode_orchestrator/prompts/: __init__.py  autonomous.py  human_clone.py  system.py
quadracode-runtime/: CONTEXT_ENGINE_AUDIT.md  Dockerfile  IMPLEMENTATION.md  pyproject.toml
quadracode-runtime/src/quadracode_runtime/: IMPLEMENTATION.md  __init__.py  __main__.py  autonomous.py  context_engine_logging.py  critique.py  deliberative.py  exhaustion_predictor.py  graph.py  invariants.py  ledger.py  logging_utils.py  long_term_memory.py  messaging.py  mock.py  mock_mode.py  observability.py  profiles.py  prp.py  registry.py  runtime.py  state.py  time_travel.py  validation.py  workspace_integrity.py
quadracode-runtime/src/quadracode_runtime/cli/: __init__.py  prompt_cli.py
quadracode-runtime/src/quadracode_runtime/config/: __init__.py  context_engine.py  prompt_manager.py  prompt_templates.py
quadracode-runtime/src/quadracode_runtime/metrics/: __init__.py  context_metrics.py
quadracode-runtime/src/quadracode_runtime/nodes/: context_curator.py  context_engine.py  context_operations.py  context_reducer.py  context_reset.py  context_scorer.py  driver.py  progressive_loader.py  prp_trigger.py  tool_node.py
quadracode-runtime/src/quadracode_runtime/prompts/: __init__.py
quadracode-runtime/src/quadracode_runtime/tools/: __init__.py  mcp_loader.py  shared.py
quadracode-runtime/tests/: test_autonomous_mode.py  test_context_curator.py  test_context_engine_efficiency.py  test_context_engine_logging.py  test_context_engine_reflection.py  test_context_governor.py  test_context_metrics_events.py  test_context_reset.py  test_context_scorer.py  test_context_tool_ingestion.py  test_context_usage_accounting.py  test_deliberative_planner.py  test_driver_context_injection.py  test_exhaustion_system.py  test_false_stop_metrics.py  test_hypothesis_critique.py  test_invariants.py  test_logging_utils.py  test_long_term_memory.py  test_manage_refinement_ledger.py  test_overflow_curation.py  test_progressive_loader.py  test_progressive_loader_skills.py  test_prp_state_machine.py  test_prp_trigger_node.py  test_registry.py  test_test_enforcement.py  test_time_travel.py  test_workspace_integrity.py
quadracode-runtime/time_travel_logs/: global.jsonl
quadracode-tools/: .gitignore  Dockerfile  IMPLEMENTATION.md  pyproject.toml
quadracode-tools/src/quadracode_tools/: __init__.py  assembly.py
quadracode-tools/src/quadracode_tools/client/: __init__.py  mcp_client.py
quadracode-tools/src/quadracode_tools/tools/: __init__.py  agent_management.py  agent_registry.py  autonomous_control.py  bash_shell.py  context_engine.py  property_tests.py  python_repl.py  read_file.py  refinement_ledger.py  test_suite.py  workspace.py  write_file.py
quadracode-tools/tests/: conftest.py  test_agent_management_hotpath.py  test_inspect_context_engine.py  test_property_tests_tool.py  test_test_suite_tool.py  test_workspace_tools.py
quadracode-ui/: Dockerfile  IMPLEMENTATION.md  pyproject.toml
quadracode-ui/src/quadracode_ui/: __init__.py  app.py  config.py
quadracode-ui/src/quadracode_ui/components/: __init__.py  file_browser.py  message_list.py  mode_toggle.py
quadracode-ui/src/quadracode_ui/pages/: 1_Chat.py  1_💬_Chat.py  2_Mailbox_Monitor.py  2_📡_Mailbox_Monitor.py  3_Workspaces.py  3_📁_Workspaces.py  4_Dashboard.py  4_📊_Dashboard.py  5_Prompt_Settings.py  __init__.py
quadracode-ui/src/quadracode_ui/utils/: __init__.py  config_sync.py  message_utils.py  persistence.py  polling_thread.py  redis_client.py  workspace_utils.py
quadracode-ui/tests/: __init__.py  conftest.py  test_app_integration_live.py  test_app_streamlit.py  test_autonomous_ui.py  test_ui_e2e_live.py
scripts/: IMPLEMENTATION.md  launch_agent.sh  run_atlassian_mcp.sh  send_test_task.sh  tail_streams.sh
tests/: Dockerfile.test-runner  conftest.py  run_tests_for_ai.py  run_tests_in_container.py  test_end_to_end.py  test_prompt_persistence.py  test_runtime_memory.py  (+2 more)
(+113 files in other folders)
