[project]
name = "quadracode-dev"
version = "0.0.0"
description = "Development meta-package for Quadracode monorepo"
requires-python = ">=3.12,<3.13"
dependencies = [
  "quadracode-contracts",
  "quadracode-tools",
  "quadracode-runtime",
  "orchestrator",
  "quadracode-agent",
  "quadracode-agent-registry",
  "quadracode-ui",
  "watchdog>=6.0.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.2",
  "langgraph>=0.6.11",
  "langgraph-api>=0.5.16",
  "langgraph-cli>=0.4.7",
  "langgraph-checkpoint>=3.0.1",
  "langgraph-checkpoint-sqlite>=2.0.10",
  "langgraph-prebuilt>=0.6.5",
  "langgraph-runtime-inmem>=0.18.0",
  "langgraph-sdk>=0.2.9",
]

[tool.uv.sources]
quadracode-contracts = { path = "quadracode-contracts", editable = true }
quadracode-tools = { path = "quadracode-tools", editable = true }
quadracode-runtime = { path = "quadracode-runtime", editable = true }
orchestrator = { path = "quadracode-orchestrator", editable = true }
quadracode-agent = { path = "quadracode-agent", editable = true }
quadracode-agent-registry = { path = "quadracode-agent-registry", editable = true }
quadracode-ui = { path = "quadracode-ui", editable = true }
