[project]
name = "quadracode-agent-registry"
version = "1.0.0"
description = "Agent Registry for Quadracode - Service discovery and monitoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_registry"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[project.scripts]
quadracode-agent-registry = "agent_registry.main:main"
