[project]
name = "quadracode-agent"
version = "0.1.0"
description = "Quadracode agent runtime (Redis MCP mailbox consumer)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv",
    "langchain-anthropic",
    "langchain-openai",
    "langgraph>=0.6,<0.7",
    "langgraph-cli[inmem]>=0.4,<0.5",
    "quadracode-tools",
    "quadracode-runtime",
    "orchestrator",
    "langchain-mcp-adapters"
]

[tool.uv.sources]
# Use the local sibling repository as the source for the dependency.
quadracode-tools = { path = "../quadracode-tools" }
quadracode-contracts = { path = "../quadracode-contracts" }
quadracode-runtime = { path = "../quadracode-runtime" }
orchestrator = { path = "../quadracode-orchestrator" }
