[project]
name = "orchestrator"
version = "0.1.0"
description = "Quadracode orchestrator runtime"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-dotenv>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-openai>=1.0",
    "langgraph>=1.0",
    "langgraph-cli[inmem]>=0.4",
    "quadracode-tools",
    "quadracode-runtime",
    "langchain-mcp-adapters>=0.2",
]

[tool.uv.sources]
# Use the local sibling repository as the source for the dependency.
quadracode-tools = { path = "../quadracode-tools" }
quadracode-contracts = { path = "../quadracode-contracts" }
quadracode-runtime = { path = "../quadracode-runtime" }
