[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quadracode-runtime"
version = "0.1.0"
description = "Shared runtime core for Quadracode orchestrator and agent"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "langgraph>=0.6,<0.7",
    "langgraph-cli[inmem]>=0.4,<0.5",
    "quadracode-tools",
    "langchain-mcp-adapters",
    "quadracode-contracts",
    "redis>=5.0",
    "pyyaml>=6.0.2,<7.0",
    "scikit-learn>=1.4,<2.0",
    "networkx>=3.2,<4.0",
    "langgraph-checkpoint-sqlite>=2,<3",
]

[tool.uv.sources]
quadracode-tools = { path = "../quadracode-tools" }
quadracode-contracts = { path = "../quadracode-contracts" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
