[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quadracode-runtime"
version = "0.1.0"
description = "Shared runtime core for Quadracode orchestrator and agent"
requires-python = ">=3.12,<3.13"
dependencies = [
    # LangChain ecosystem
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-openai>=1.0",
    "langchain-mcp-adapters>=0.2",
    # LangGraph
    "langgraph>=1.0",
    "langgraph-cli[inmem]>=0.4",
    "langgraph-checkpoint-postgres>=3.0",
    "psycopg[binary]>=3.1",
    # Local workspace packages
    "quadracode-tools",
    "quadracode-contracts",
    # Infrastructure
    "redis>=5.0",
    "fakeredis>=2.20",
    "httpx>=0.27",
    # Utilities
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "psutil>=5.9",
]

[tool.uv.sources]
quadracode-tools = { path = "../quadracode-tools" }
quadracode-contracts = { path = "../quadracode-contracts" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
