[project]
name = "quadracode-ui"
version = "0.1.0"
description = "Streamlit UI for Quadracode orchestrator"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.38",
    "redis>=5.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "pygments>=2.17",
    "plotly>=5.18",
    "quadracode-contracts",
    "quadracode-tools",
]

[tool.uv.sources]
quadracode-contracts = { path = "../quadracode-contracts" }
quadracode-tools = { path = "../quadracode-tools" }

[project.optional-dependencies]
tests = ["pytest>=8.2"]
